<resources>
    <string name="app_name">FaceMaker</string>
    <string name="fab_content_description">fab</string>

    <string name="completed">완료됨</string>
    <string name="task_name">task name</string>
    <string name="task_description">task description</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="kakao_native_app_key">"0457381696664cd47588999d9e0fbb01"</string>

    <string name="facebook_app_id">417172042918845</string>
    <string name="fb_login_protocol_scheme">fb417172042918845</string>
    <string name="email_sign_up">이메일 회원가입</string>
    <string name="new_project">새 프로젝트</string>
    <string name="todo">TODO</string>
    <string name="user_name">user name</string>
    <string name="project">프로젝트</string>
    <string name="today_task">오늘 할 일</string>
    <string name="my_day">나의 하루</string>
    <string name="important">중요</string>
    <string name="planned">계획된 일정</string>
    <string name="all">모두</string>
    <string name="completion">완료</string>
    <string name="tasks">작업들</string>
    <string name="none_name_project">제목 없는 프로젝트</string>
    <string name="fab">fab</string>
    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="project_add">프로젝트 추가하기</string>
    <string name="project_name">프로젝트명</string>
    <string name="project_name_input">프로젝트명 입력</string>
    <string name="save">저장</string>
    <string name="add_task">작업 추가</string>
    <string name="group_by">그룹별 보기</string>
    <string name="hide_completion_tasks">완료된 작업 숨기기</string>
    <string name="show_completion_tasks">완료된 작업 보기</string>
    <string name="overdue">지연</string>
    <string name="today">오늘</string>
    <string name="tomorrow">내일</string>
    <string name="next_week">다음 주</string>
    <string name="this_week">이번 주</string>
    <string name="later">나중에</string>
    <string name="all_planned">전체</string>
    <string name="by_project">프로젝트별</string>
    <string name="by_due_date">기한별</string>
    <string name="ok">확인</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">검색</string>

</resources>