<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            app:layout_constraintBottom_toTopOf="@+id/project_list_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="@dimen/small_padding"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_user_name_text"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle_24px" />

            <TextView
                android:id="@+id/profile_user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_padding"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:paddingTop="2dp"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_24px_black"
                android:drawablePadding="@dimen/small_padding"
                android:text="@string/user_name"
                app:drawableRightCompat="@drawable/ic_keyboard_arrow_down_24px"
                app:layout_constraintBottom_toTopOf="@+id/profile_email_text"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/profile_user_name_text"
                app:layout_constraintTop_toBottomOf="@+id/profile_user_name_text" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/small_padding"
                android:background="#00FFFFFF"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_24px" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/project_list_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/add_project_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_item">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_project_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawablePadding="@dimen/padding"
            android:padding="@dimen/padding"
            android:scaleType="center"
            android:src="@drawable/ic_add_black_24dp"
            android:text="@string/new_project"
            android:textSize="20sp"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_list_recycler_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>